# OpenPhys

./: CMakeLists.txt  OpenPhys.cbp  README.md
include/: Camera.h  Object.h  includes.h
include/glad/: glad.h
include/shaders/: triangle.vert
lib/pkgconfig/: glfw3.pc
src/: Object.cpp  glad.c  main.cpp
